style.css
/* -------  General Styles ------- */

body {
  font-family: "Lato", sans-serif;
}

h2 {
  font-size: 32px;
  font-weight: 400;
  margin: 0 10px 10px 10px;
  text-align: center;
}

h3 {
  font-size: 18px;
  font-weight: 500;
}

p {
  line-height: 1.5em;
  margin: 0;
}

section {
  padding: 20px;
  display: flex;
  flex-direction: column;
}

section.alternate-background {
  background-color: #00a699;
  color: #fff;
}

main img {
  width: 100%;
}

/* ---  Groups & Items --- */

.group {
  display: flex;
  flex-direction: column;
}

.item {
  flex: 1;
  margin: 10px;
}

.item-double {
  flex: 2;
  align-self: center;
}

/* -------  Navigation ------- */

header {
  background-color: #ff385c;
  padding: 20px 20px 0 20px;
  text-align: center;
}

.logo {
  font-family: "Pangolin", cursive;
  font-size: 72px;
  color: #fff;
}

header nav {
  display: flex;
  justify-content: center;
}

header nav ul {
  display: flex;
  padding: 0;
  
}

header nav ul li {
  list-style-type: none;
}

header nav ul li: :last-child {
  margin-right: 0;
}

header nav ul li a {
  color: #fff;
  text-decoration: none;
  padding: 0 20px 0 0;
  
}

header nav ul li a:hover {
  color: #bdbdbd;
  text-decoration: none;
}

/* -------  Search Form ------- */
form {
  border: 2px solid #ff385c;
  padding: 10px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

form .input {
  display: flex;
  justify-content: space-between;
}

form label {
  font-weight: bold;
}

form select,
form input {
  margin-bottom: 20px;
  width: 180px;
  align-items:end;
}

form button {
  background-color: #ff385c;
  border: none;
  color: #fff;
  font-size: 24px;
  padding: 15px;
  width: 100%;
}

/* -------  Footer ------- */

footer {
  background-color: #ff385c;
}

footer p {
  color: #fff;
  text-align: center;
  padding: 20px;
}

/* -------  Media Query ------- */
@media screen and (min-width: 769px) {
  header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }
  form .group  {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
  }
  form .group .input {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex: 1;
  }
  form button {
    display: flex;
    justify-content: center;
    align-self: center;
    flex: 1;
    flex-wrap: wrap;
  }
  section .group {
    display: flex;
    flex-direction: row;
  }
  #ideas .group {
    display: grid;
    grid-template-columns: 1fr 1fr; 
    grid-template-rows: 1fr 1fr;    
    grid-gap: 20px;
  }
  #host .group .item {
    align-self: center;
  }
}

